[package]
name = "chattest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-web-httpauth = "0.8.2"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.40.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
actix-broker = "0.4.3"
